testsuite/poke.pkl/int-struct-type-diag-9.pk
/* { dg-do compile } */

type Foo =
  struct int<33> /* { dg-error "invalid total size.*\n.*expected 33" } */
  {
    struct int<16>
    {
      byte a;
      byte b;
    } la;

   uint<16> le;
  };
